kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-project
  labels:
    name: cicd-project
