kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balloon-app
  namespace: cicd-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: balloon-app
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: balloon-app
    spec:
      containers:
        - name: application
          image: stanchevskid/balloons-project:latest
          ports:
            - containerPort: 8000
