kubernetes/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-database
  namespace: cicd-project
spec:
  serviceName: postgres-database-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
              name: postgres-port
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-database-svc
  namespace: cicd-project
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
