kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: balloon-svc
  namespace: cicd-project
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: balloon-app
